--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,8 @@ sudo: false
 language: ruby
 rvm:
   - 2.5.1
-before_install: gem install bundler -v 1.16.1
+before_install:
+  - gem install bundler -v 2.0.2
+  - bundle install
+script:
+  - rake test
